components/ChatSingleMessage/ChatSingleMessage.module.scss
@import "../../styles/globals.scss";
@import "../../styles/fonts.scss";

.mobileInfo {
    border-color: $black !important;
    background: $white_2 !important;
    .Body {
        .Info {
            .Timestamp {
                visibility: visible !important;
            }
        }
    }
}

.noselect {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.ChatParentContainer {
    max-width: 100%;
    width: 100%;
    border-radius: 8px;
    transform: translateZ(0);

    &.Editing {
        background-color: $hot_pink;
    }

    &.EmojiActive {
        transform: none;
    }

    .EmojiMobile {
        position: fixed;
        z-index: 100;
        bottom: 0;
    }
}

.SingleMessage {
    display: inline-flex;
    position: relative;
    background-color: transparent;
    width: 100%;
    padding: 8px 6px 12px 0px;
    column-gap: 10px;
    border: 1px solid transparent;
    border-radius: 8px;

    &Desktop {
        padding: 8px 6px 12px 6px;
        &:hover {
            border-color: $black;
            background: $white_2;
            //border-image: linear-gradient(to right, $silver-med, $white) 1;
            .Body {
                .Info {
                    .Timestamp {
                        visibility: visible;
                    }
                }
            }
        }
    }

    .UserIcon {
        height: fit-content;
        width: fit-content;
        border-radius: 50%;
        user-select: none;
    }
    .emoji-mart {
        position: absolute;
        top: 40px;
        right: 0;
        z-index: 999;
    }

    .EmojiPicker {
        position: absolute;
        bottom: 0px;
        z-index: 10;

        #root {
            background-color: $fuel;
        }
    }

    .MessageEmoji {
        font-size: 22px;
    }

    > img,
    &Avatar {
        position: relative;
        width: 40px;
        max-height: 40px;
        border-radius: 9999px;
        overflow: hidden;
        object-fit: cover;
    }

    &AvatarNo {
        position: relative;
        height: 36px;
        width: 36px;
        max-height: 36px;
        max-width: 36px;
        min-width: 36px;
        max-width: 36px;
        background-color: $hot_blue;
        border-radius: 9999px;
        @include topicTitleMobile;
        color: $font_dark;
    }

    .Body {
        position: relative;
        width: 100%;
        .Info {
            display: flex;
            align-items: baseline;
            column-gap: 8px;
            height: 16px;
            padding: 0px 0px 0px 0px;
            .Creator {
                @include chatProfile;
                color: $font_light;
                user-select: none;
            }
            .Timestamp {
                visibility: hidden;
                color: $font_medium;
                @include timeStamp;
                user-select: none;
            }
        }

        .Content {
            position: relative;
            width: fit-content;
            max-width: 100%;
            color: $font_light;
            @include chatText;
            border: 0;
            border: 0;
            white-space: pre-wrap;
            overflow-wrap: anywhere;

            .message-text {
                margin: 0;
                white-space: pre-wrap;
                overflow-wrap: anywhere;
            }

            > img {
                border-radius: 12px;
                border: 3px solid transparent;
                margin-top: 4px;
                margin-bottom: 4px;

                &:hover {
                    border-color: $hot_pink;
                }
            }
        }

        .urlLink {
            display: inline-block;
            font-size: inherit;
            white-space: pre-wrap;
            @include url;
            word-break: break-all;
            color: lighten($hot_blue, 10%);
        }

        &Reactions {
            position: relative;
            display: flex;
            align-items: center;
            flex-wrap: wrap;
            margin-left: 0px;
            margin-top: 4px;
            width: max-content;
            column-gap: 4px;
            row-gap: 4px;
            //background: $black_60;
            //padding: 4px 8px;
            border-radius: 999px;
            border: 0;

            > * {
                margin-right: $gutter;
            }

            &Emoji {
                display: flex;
                align-items: center;
                gap: 6px;
                position: relative;
                height: 32px;
                //width: 48px;
                font-size: 24px;
                text-align: center;
                background-color: $black;
                border-radius: 99px;
                margin: 0;
                border: 1px solid $ash_heavy;
                user-select: none;
                padding: 0px 8px;

                .label {
                    color: $font_medium;
                    @include reactionLabel;
                }
                &Owner {
                    border-color: $hot_pink;
                }
                &Data {
                    position: absolute;
                    top: -87%;
                    background: black;
                    color: white;
                    &Group {
                        position: absolute;
                        top: -87%;
                        background: black;
                        color: white;
                    }
                }

                &Desktop {
                    &:hover {
                        cursor: pointer;
                        scale: 1.02;
                    }
                }

                &Mobile {
                    &:active {
                        border-color: $ash;
                    }
                }
            }

            &AddReaction {
                height: 32px;
                width: 44px;
                background-color: transparent;
                padding: 0;
                padding: 2px 0px 0px 0px;
                border-radius: 99px;
                margin: 0;
                border: 1px solid $ash_heavy;
                user-select: none;
                background-color: $black;
                svg {
                    width: 20px;
                    height: 20px;
                }
                path {
                    fill: $ash_medium;
                }

                &Desktop {
                    &:hover {
                        border-color: $ash;
                        cursor: pointer;
                        scale: 1.02;
                    }
                }

                &Mobile {
                    &:active {
                        border-color: $ash;
                    }
                }
            }
        }
    }

    .Controls {
        position: absolute;
        z-index: 10;
        display: flex;
        flex-direction: row;
        gap: 4px;
        top: -8px;
        right: 16px;
        background-color: $ash_medium;
        backdrop-filter: blur(24px);
        border-radius: 8px;
        padding: 2px;
        border: 1px solid $black;

        > button {
            position: relative;
            display: flex;
            align-items: center;
            justify-content: center;
            height: 28px;
            width: 28px;
            border-radius: 10px;
            background-color: transparent;
            cursor: pointer;
            border: 0;
            padding: 4px;
            overflow: hidden;

            path {
                fill: $black;
            }

            &:hover {
                scale: 1.2;
                path {
                    fill: $font_light;
                }
            }
        }
    }
}

.EmojiPicker {
    position: absolute;
    bottom: 0px;
    z-index: 10;

    #root {
        background-color: $fuel;
    }
}
.imageholder {
    height: 63%;
    overflow: hidden;
}

.ogCard {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: 12px;
    padding-bottom: 6px;
    background-color: $black;
    border-radius: 12px;
    width: 100%;
    max-width: 320px;
    user-select: none;
    height: 300px;
    overflow: hidden;
    border: 1px solid $ash;

    .attribution {
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: flex-start;
        width: 100%;
        height: 16px;
        padding: 0px;
        margin-bottom: 6px;

        img {
            margin: 0;
            width: 16px;
            height: 16px;
            border-radius: 999px;
            background-color: transparent;
            //overflow: hidden;
            object-fit: contain;
        }

        .siteTitle {
            margin-left: 6px;
            @include worksans;
            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;
            display: inline-block;
            font-size: 12px;
            line-height: 100%;
            font-weight: 800;
            color: $font_light;
        }
    }

    .titleWrapper {
        max-height: 40px;
        overflow: hidden;
        text-decoration: none;
        cursor: pointer;

        p {
            color: $font_light;
            @include worksans;
            font-weight: 600;
            letter-spacing: 0em;
            line-height: 115%;
            font-size: 14px;
            word-wrap: normal;
            word-break: keep-all;
            overflow: hidden;
            text-overflow: ellipsis;
            display: inline-block;
        }
    }

    .imageholder {
        width: fit-content;
        max-width: 100%;
        display: block;
        object-fit: contain;
        padding: 0;
        margin: 4px 0px;
        border-radius: 8px;
    }

    .description {
        flex: 1;
        width: 100%;
        @include worksans;
        line-height: 120%;
        font-weight: 500;
        font-size: 13px;
        letter-spacing: 0em;
        margin-bottom: 4px;
        color: $font_medium;
        overflow: hidden;
        text-overflow: ellipsis;
        display: inline-block;
    }
}

.linkCard {
    position: relative;
    padding: 24px 32px 20px 20px;
    gap: 20px;
    margin-top: 10px;
    background-color: $white;
    border: 1px solid $silver-med;
    border-radius: 12px;
    width: fit-content;
    max-width: 100%;
    user-select: none;

    .urlLogo {
        width: 40px;
        min-width: 40px;
    }

    .icon {
        position: absolute;
        top: 4px;
        right: 4px;
        width: 24px;
        min-width: 24px;
        path {
            fill: $silver-med;
        }
    }
}

